--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
         
            <h1 class="logo">
-    <img src="./photos/iconenossasra.png" alt="Ícone de Nossa Senhora" class="logo-icon">
+    <img src="iconenossasra.png" alt="Ícone de Nossa Senhora" class="logo-icon">
      Sub Tuum Praesidium
 </h1>
             <nav class="nav">
@@ -54,8 +54,8 @@
 
             </div>
             <div class="about-image">
-                <img src="./photos/nossasenhora2.png" alt="">
-                <img src="./photos/nossasenhora.png" alt="Representação da Devoção a Nossa Senhora.">
+                <img src="nossasenhora2.png" alt="">
+                <img src="nossasenhora.png" alt="Representação da Devoção a Nossa Senhora.">
             </div>
         </div>
     </section>
@@ -66,9 +66,9 @@
             <p class="subtitle-light">Serão instaladas imagens de Nossa Senhora Aparecida ao longo da rodovia </p>
             
             <div class="about-image2">
-                <img src="./photos/pic1.png" alt="Imagens de Nossa Senhora Aparecida">
-                <img src="./photos/pic2.png" alt="Imagens de Nossa Senhora Aparecida">
-                <img src="./photos/pic3.png" alt="Imagens de Nossa Senhora Aparecida">
+                <img src="pic1.png" alt="Imagens de Nossa Senhora Aparecida">
+                <img src="pic2.png" alt="Imagens de Nossa Senhora Aparecida">
+                <img src="pic3.png" alt="Imagens de Nossa Senhora Aparecida">
             </div>
             <div class="features-grid">
                 </div>
@@ -101,4 +101,5 @@
     </footer>
 
 </body>
+
 </html>
